--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ version = "0.1.0"
 [dependencies]
 bevy = "0.6.1"
 bevy_rapier2d = {version = "0.12", features = ["simd-stable", "render"]}
+rand = "0.8"
