--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,15 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = "0.6.1"
+bevy = {version = "0.6.1", features = [
+  "bevy_gilrs",
+  "bevy_winit",
+  "render",
+  "png",
+  "hdr",
+  "x11",
+  "filesystem_watcher",
+]}
+bevy_kira_audio = { version = "0.8", features = ["default", "mp3"]}
 bevy_rapier2d = {version = "0.12", features = ["simd-stable", "render"]}
 rand = "0.8"
