--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,5 @@ bevy = {version = "0.6.1", features = [
 ]}
 bevy_kira_audio = { version = "0.8", features = ["default", "mp3"]}
 bevy_rapier2d = {version = "0.12", features = ["simd-stable", "render"]}
+csv = "1.1"
 rand = "0.8"
